array.island.Island.scala.error
Erreur de compilation :
Island:3: error: not found: value a
  a=0
  ^Island:4: error: not found: value n
  n= numbers.size
  ^Island:7: error: not found: value a
      a=a+1
      ^Island:10: error: not found: value a
return a
       ^