array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  a=0
  n= numbers.size
  for(i<-1 to num.length) {
    if (num(i+1) > num(i)) {
      a=a+1
    }
  }
return a
}